--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,17 +1,22 @@
 workflows:
   ios-workflow:
     name: iOS Workflow
-    instance_type: mac_mini_m2
+    instance_type: mac_mini_m1
     integrations:
       app_store_connect: eyetest
     environment:
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.mni.vision.check.pro
+      vars:
+        BUNDLE_ID: 'com.mni.vision.check.pro'
       flutter: stable
       xcode: latest
       cocoapods: default
     scripts:
+      - name: Set up code signing
+        script: |
+          xcode-project use-profiles
       - name: Flutter clean
         script: |
           flutter clean
@@ -21,11 +26,24 @@ workflows:
       - name: Install CocoaPods
         script: |
           cd ios && pod install && cd ..
+      - name: Increment build number
+        script: |
+          BUILD_NUMBER=$(($(app-store-connect get-latest-testflight-build-number "$BUNDLE_ID") + 1))
+          cd ios
+          agvtool new-version -all $BUILD_NUMBER
+          cd ..
       - name: Build iOS app
         script: |
-          flutter build ios --release
+          flutter build ipa --release
     artifacts:
       - build/ios/ipa/*.ipa
+      - /tmp/xcodebuild_logs/*.log
     publishing:
       app_store_connect:
         auth: integration
+
+        # TestFlight Configuration
+        submit_to_testflight: true
+
+        # App Store Configuration (set to true when ready for production)
+        submit_to_app_store: false
