--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
   device_frame: ^1.4.0
+  easy_localization: ^3.0.8
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +77,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/img/
-  #   - assets/lottie
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
